kubernetes/production/template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  name: ink-ingress
spec:
  rules:
    - host: "server.ink-remix.blockchain-it.hr"
      http:
        paths:
        - backend:
            serviceName: server-svc
            servicePort: 80
    - host: "ink-remix.blockchain-it.hr" 
      http:
        paths:
          - backend:
              serviceName: plugin-svc
              servicePort: 80   
---
